-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.6.0 Beta
-
None
C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\ce\include\xutility(287) : error C2678: binary '<' : no operator found which takes a left-hand operand of
type 'const QString' (or there is no acceptable conversion)
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qchar.h(561): could be 'bool operator <(QChar,QChar) throw()' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qbytearray.h(605): or 'bool operator <(const QByteArray &,const QByteArray &)' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qbytearray.h(607): or 'bool operator <(const QByteArray &,const char *)' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qbytearray.h(609): or 'bool operator <(const char *,const QByteArray &)' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qstring.h(630): or 'bool operator <(const QString &,const QString &)' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qstring.h(703): or 'bool operator <(const char *,const QString &)' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qstring.h(710): or 'bool operator <(const char *,const QStringRef &)' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qstring.h(1133): or 'bool operator <(QLatin1String,QLatin1String) throw()' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qstring.h(1190): or 'bool operator <(const char *,QLatin1String)' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qstring.h(1522): or 'bool operator <(const QStringRef &,const QStringRef &)' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qcollator.h(72): or 'bool operator <(const QCollatorSortKey &,const QCollatorSortKey &)' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qelapsedtimer.h(80): or 'bool operator <(const QElapsedTimer &,const QElapsedTimer &) throw()' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qversionnumber.h(297): or 'bool operator <(const QVersionNumber &,const
QVersionNumber &) throw()' [found using argument-dependent lookup]
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qstring.h(637): or 'bool QString::operator <(QLatin1String) const'
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qstring.h(689): or 'bool QString::operator <(const char *) const'
c:\dev\wec7qt560\qtbase\include\qtcore\../../../../qt5/qtbase/src/corelib/tools/qstring.h(696): or 'bool QString::operator <(const QByteArray &) const'
while trying to match the argument list '(const QString, Qt3DRender::Render::ParameterInfo)'
C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\ce\include\algorithm(2262) : see reference to function template instantiation 'bool std::_Debug_lt<T,_Ty>(_Ty1 &,const _Ty2 &,const wchar_t *,unsigned int)' being compiled
with
[
T=Qt3DRender::Render::ParameterInfo,
_Ty=QString,
_Ty1=Qt3DRender::Render::ParameterInfo,
_Ty2=QString
]
C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\ce\include\algorithm(2274) : see reference to function template instantiation '_FwdIt std::_Lower_bound<Qt3DRender::Render::ParameterInfo*,_Ty,std::iterator_traits<_Iter>::difference_type>(_FwdIt,_FwdIt,const _Ty &,_Diff *)' being compiled
with
[
_FwdIt=Qt3DRender::Render::ParameterInfo *,
_Ty=QString,
_Iter=Qt3DRender::Render::ParameterInfo *,
_Diff=std::iterator_traits<Qt3DRender::Render::ParameterInfo *>::difference_type
]
C:\dev\qt5\qt3d\src\render\jobs\renderviewjobutils.cpp(338) : see reference to function template instantiation '_FwdIt std::lower_bound<Qt3DRender::Render::ParameterInfo*,QString>(_FwdIt,_FwdIt,const _Ty &)' being compiled
with
[
_FwdIt=Qt3DRender::Render::ParameterInfo *,
_Ty=QString
]
NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\\ce\bin\x86_arm\cl.EXE"' : return code '0x2'
Stop.
NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio 9.0\VC\BIN\nmake.exe"' : return code '0x2'
Stop.
NMAKE : fatal error U1077: 'cd' : return code '0x2'
Stop.
NMAKE : fatal error U1077: 'cd' : return code '0x2'
Stop.
For Gerrit Dashboard: QTBUG-50855 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
148204,4 | Fix WEC7 build | 5.6.0 | qt/qt3d | Status: MERGED | +2 | 0 |