Fix WEC7 build

lower_bound does require some additionally operators in order to pass
lower_bound static checks.

Task-number: QTBUG-50855
Change-Id: I9619770fa9c8ad638d7179d886dfe28fcf4eb3d5
Signed-off-by: Andreas Holzammer <andreas.holzammer@kdab.com>
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>